--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,60 @@
-.env
+.env 
+
+# --- Python build artifacts ---
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
+.eggs/
+.mypy_cache/
+.pytest_cache/
+coverage/
+*.log
+
+# --- Environment / dependencies ---
+.venv/
+venv/
+env/
+.doppelSLenv/
+*.env
+*.toml
+*.yml
+*.yaml.lock
+*.pickle
+
+# --- Streamlit / app state ---
+.streamlit/
+.cache/
+logs/
+
+# --- Local databases ---
+*.db
+*.sqlite3
+chat.db
+
+# --- OS junk ---
+.DS_Store
+Thumbs.db
+
+# --- Editors / IDEs ---
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# --- Generated content ---
+resources/__pycache__/
+src/**/__pycache__/
+src/utils/prompts/**/__pycache__/
+src/screens/__pycache__/
+
+# --- User-specific data ---
+*.bak
+*.tmp
+*.swp
+*.swp
